[gd_scene load_steps=3 format=3 uid="uid://cba3rhso7w7qe"]

[ext_resource type="Script" path="res://Interfaces/Pause.gd" id="1_v3i7n"]

[sub_resource type="LabelSettings" id="LabelSettings_52anq"]
font_size = 50

[node name="Pause" type="Control"]
top_level = true
clip_children = 2
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
script = ExtResource("1_v3i7n")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -281.0
offset_top = -228.0
offset_right = 281.0
offset_bottom = 228.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
text = "PAUSE"
label_settings = SubResource("LabelSettings_52anq")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="ButtonResume" type="Button" parent="PanelContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
text = "REPRENDRE
"

[node name="MarginContainer4" type="MarginContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="ButtonMenu" type="Button" parent="PanelContainer/VBoxContainer/MarginContainer4"]
layout_mode = 2
text = "MENU
"

[node name="MarginContainer3" type="MarginContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="ButtonExit" type="Button" parent="PanelContainer/VBoxContainer/MarginContainer3"]
layout_mode = 2
text = "QUITTER
"
